# odoo-toolbox

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/server/: Dockerfile  README.md  pyproject.toml
apps/server/app/: __init__.py  main.py
apps/server/app/api/: auth.py  deps.py  files.py  jobs.py  settings.py  tools.py
apps/server/app/api/platform/: runs.py
apps/server/app/core/: config.py  security.py
apps/server/app/db/: session.py
apps/server/app/models/: __init__.py  entities.py
apps/server/app/models/platform/: __init__.py  tool_artifact.py  tool_run.py
apps/server/app/models/tools/: __init__.py  gettext_translation.py
apps/server/app/schemas/: auth.py  files.py  gettext_translation.py  jobs.py  platform_runs.py  settings.py
apps/server/app/services/: file_service.py  openai_service.py  settings_service.py
apps/server/app/tools/: registry.py
apps/server/app/tools/csv_translation/: __init__.py  context_builder.py  exporter.py  manifest.py  parser.py  prompt_builder.py  router.py  schemas.py  task_runner.py
apps/server/app/tools/gettext_translation/: __init__.py  context_builder.py  core.py  exporter.py  manifest.py  parser.py  (+4 more)
apps/server/app/workers/: celery_app.py
apps/server/tests/: test_celery_imports.py  test_csv_translation_core.py  test_csv_translation_run_bridge.py  test_files_api.py  test_gettext_translation_api.py  test_gettext_translation_core.py  test_runs_api.py  test_runtime_security.py  test_tool_artifacts_api.py  test_tool_registry.py  test_tool_runs_model.py  test_tools_api.py
(+33 files in other folders)
